FLY wire David/force-app/main/default/objects/Passfort_KYC_Form__mdt/Passfort_KYC_Form__mdt.object-meta.xml
<CustomObject>
    <description>Passfort KYC Form</description>
    <label>Passfort KYC Form</label>
    <pluralLabel>Passfort KYC Forms</pluralLabel>
</CustomObject>