FLY wire David/force-app/main/default/objects/Passfort_KYC_Form__mdt/fields/FormId__c.field-meta.xml
<CustomField>
    <fullName>FormId__c</fullName>
    <label>FormId</label>
    <length>36</length>
    <type>Text</type>
</CustomField>