FLY wire David/force-app/main/default/objects/Passfort_KYC_Form__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Spanish (Latin America)</fullName>
            </value>
            <value>
                <fullName>Spanish (Spain)</fullName>
            </value>
            <value>
                <fullName>Portuguese (Brazil)</fullName>
            </value>
            <value>
                <fullName>Portuguese (Portugal)</fullName>
            </value>
            <value>
                <fullName>French (France)</fullName>
            </value>
            <value>
                <fullName>Korean (South Korea)</fullName>
            </value>
            <value>
                <fullName>Japanese (Japan)</fullName>
            </value>
            <value>
                <fullName>Polish (Poland)</fullName>
            </value>
            <value>
                <fullName>Chinese (China-Simplified)</fullName>
            </value>
            <value>
                <fullName>Italian (Italy)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>