FLY wire David/force-app/main/default/objects/Passfort_KYC_Form__mdt/fields/theme__c.field-meta.xml
<CustomField>
    <fullName>theme__c</fullName>
    <label>theme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>